; ModuleID = '/home/carl/AnghaBench/reactos/base/services/wlansvc/extr_wlansvc.c_UpdateServiceStatus.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/wlansvc/extr_wlansvc.c_UpdateServiceStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64 }

@SvcStatus = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64, i64)* @UpdateServiceStatus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @UpdateServiceStatus(i32 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %6, align 8
  %8 = icmp sgt i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %3
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @SvcStatus, i32 0, i32 0), align 8
  %12 = add nsw i64 %11, %10
  store i64 %12, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @SvcStatus, i32 0, i32 0), align 8
  br label %14

13:                                               ; preds = %3
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @SvcStatus, i32 0, i32 0), align 8
  br label %14

14:                                               ; preds = %13, %9
  %15 = load i64, i64* %5, align 8
  store i64 %15, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @SvcStatus, i32 0, i32 1), align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @SetServiceStatus(i32 %16, %struct.TYPE_3__* @SvcStatus)
  ret void
}

declare dso_local i32 @SetServiceStatus(i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
